<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_title"
        android:textSize="42sp"
        android:textStyle="bold"
        android:textColor="@color/purple_700"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autoSizeTextType="uniform"
        android:autoSizeMinTextSize="24sp"
        android:autoSizeMaxTextSize="48sp"
        android:autoSizeStepGranularity="2sp" />

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/start_game"
        android:textSize="18sp"
        android:padding="16dp"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/btnAddWords"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/add_words"
        android:textSize="18sp"
        android:padding="16dp"
        app:layout_constraintWidth_percent="0.7"
        app:layout_constraintEnd_toEndOf="@+id/btnStartGame"
        app:layout_constraintStart_toStartOf="@+id/btnStartGame"
        app:layout_constraintTop_toBottomOf="@+id/btnStartGame" />

</androidx.constraintlayout.widget.ConstraintLayout> 